# pyfoo

./: LICENSE  README.md  pyproject.toml
src/foo/: bar.py
