[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foo"
version = "0.0.1"
authors = [
    { name="Stefan Arentz", email="stefan@arentz.ca" },
]
description = "Foo package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/st3fan/pyfoo"
"Bug Tracker" = "https://github.com/st3fan/pyfoo/issues"
