[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"/Users/stefan/conda-projects/python-packages/pyfoo/src/foo/__pycache__/bar.cpython-311.pyc" = "foo/__pycache__/bar.cpython-311.pyc"
"/Users/stefan/conda-projects/python-packages/pyfoo/src/foo/__pycache__/__init__.cpython-311.pyc" = "foo/__pycache__/__init__.cpython-311.pyc"

[project]
name = "foo"
version = "0.0.1"
authors = [
    { name="Stefan Arentz", email="stefan@arentz.ca" },
]
description = "Foo package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/st3fan/pyfoo"
"Bug Tracker" = "https://github.com/st3fan/pyfoo/issues"
